[package]
authors = ["Lee Lup Yuen <luppy@appkaki.com>, Paul Florence <perso@florencepaul.com>"]
categories = ["embedded", "no-std"]
description = "A sample Rust application for STM32 Black Pill microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "bluepill"]
license = "MIT OR Apache-2.0"
name = "stm32-black-pill-rust"
repository = "https://git.florencepaul.com/gbip/black_pill"
version = "0.3.2"
[dependencies]
embedded-hal = "0.2.1"
nb = "0.1.1"
numtoa = "0.2.3"
librobot = {git="https://github.com/ClubRobotInsat/librobot"}

[dependencies.arrayvec]
default-features = false
version = "0.4.7"

[dependencies.cortex-m]
version = "0.5.7"

[dependencies.cortex-m-rt]
features = ["device"]
version = "0.5.7"

[dependencies.cortex-m-semihosting]
version = "0.3.0"

[dependencies.panic-semihosting]
version = "0.3.0"

[dependencies.pid_control]
branch = "genericity"
git = "https://github.com/gbip/pid_control-rs"

[dependencies.qei]
version = "1.0.1"

[dependencies.stm32f103xx]
features = ["rt"]
version = "0.10"

[dependencies.stm32f103xx-hal]
features = ["rt"]
git = "https://github.com/japaric/stm32f103xx-hal"
[profile.release]
codegen-units = 1
debug = true
lto = true
